--- a/lectures/L4/Exercise_1 Final.ipynb
+++ b/lectures/L4/Exercise_1 Final.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -61,6 +61,8 @@
     "\n",
     "data = open('prog_data.txt', 'r')\n",
     "numbers = [float(num) for num in data.readlines()]\n",
+    "data.close()\n",
+    "\n",
     "common_nums = collections.Counter(numbers).most_common()\n",
     "most_common_num = common_nums[0]\n",
     "\n",
