--- a/lectures/L4/Exercise_2 Final.ipynb
+++ b/lectures/L4/Exercise_2 Final.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -31,13 +31,18 @@
     }
    ],
    "source": [
-    "names = open('names.txt', 'r').read().splitlines() \n",
+    "nfile = open('names.txt', 'r')\n",
+    "names = nfile.read().splitlines() \n",
+    "nfile.close()\n",
+    "\n",
+    "sfile = open('species.txt', 'r')\n",
     "species = open('species.txt', 'r').read().splitlines()\n",
+    "sfile.close()\n",
     "\n",
     "my_new_dict = {}\n",
     "\n",
-    "for i in range(len(species)):\n",
-    "    my_new_dict[species[i]] = names[i]\n",
+    "for formula, animal in zip(species, names):\n",
+    "    my_new_dict[formula] = animal\n",
     "\n",
     "print(my_new_dict)\n",
     "\n",
