--- a/homeworks/HW3/HW3-Final.ipynb
+++ b/homeworks/HW3/HW3-Final.ipynb
@@ -350,7 +350,9 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -388,6 +390,7 @@
    "cell_type": "code",
    "execution_count": 129,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
