--- a/lectures/L6/Exercise_1-Copy1.ipynb
+++ b/lectures/L6/Exercise_1-Copy1.ipynb
@@ -27,8 +27,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('The correct answer is:', '42.0000000000000000')\n",
+      "('The answer is:', '42.0000000000000000')\n"
+     ]
+    }
+   ],
    "source": [
     "def my_message(message):\n",
     "    def correct_answer_is(answer):\n",
