--- a/lectures/L7/Exercise_1-Final.ipynb
+++ b/lectures/L7/Exercise_1-Final.ipynb
@@ -26,12 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting 12.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%file 12.py\n",
     "import numpy as np\n",
     "def L2(v, *args):\n",
     "    \"\"\"Returns the computed L2 norm of a vector v.\n",
@@ -64,7 +71,20 @@
     "            raise ValueError(\"Length of list of weights must match length of target list.\")\n",
     "        for i, vi in enumerate(v):\n",
     "            s += w[i] * w[i] * vi * vi\n",
-    "    return np.sqrt(s)"
+    "    return np.sqrt(s)\n",
+    "def test_L2():\n",
+    "    assert L2([3,4]) == 5.0\n",
+    "test_L2()\n",
+    "def test_L2_types():\n",
+    "    try:\n",
+    "        L2([3,4],[3,3,3])\n",
+    "    except ValueError as err:\n",
+    "        assert(type(err) == ValueError)\n",
+    "\n",
+    "test_L2_types()\n",
+    "def test_L2_weighted():\n",
+    "    assert L2([3,4],[1,1]) == 5.0\n",
+    "test_L2_weighted()"
    ]
   },
   {
@@ -109,46 +129,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.6.1, pytest-3.2.1, py-1.4.33, pluggy-0.4.0\n",
+      "rootdir: /Users/riddhishah/Documents/cs207/cs207_riddhi_shah/lectures/L7, inifile:\n",
+      "plugins: cov-2.3.1\n",
+      "collected 1 item                                                                \u001b[0m\u001b[1m\n",
+      "\n",
+      "12.py .\n",
+      "\n",
+      "---------- coverage: platform darwin, python 3.6.1-final-0 -----------\n",
+      "Name    Stmts   Miss  Cover   Missing\n",
+      "-------------------------------------\n",
+      "12.py      24      0   100%\n",
+      "\n",
+      "\n",
+      "\u001b[32m\u001b[1m=========================== 1 passed in 0.76 seconds ===========================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "def test_L2():\n",
-    "    assert L2([3,4]) == 5.0\n",
-    "test_L2()"
+    "!pytest --doctest-modules --cov --cov-report term-missing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def test_L2_types():\n",
-    "    try:\n",
-    "        L2([3,4],[3,3,3])\n",
-    "    except ValueError as err:\n",
-    "        assert(type(err) == ValueError)\n",
-    "\n",
-    "test_L2_types()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def test_L2_weighted():\n",
-    "    assert L2([3,4],[1,1]) == 5.0\n",
-    "test_L2_weighted()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
