--- a/homeworks/HW4/HW4-Final.ipynb
+++ b/homeworks/HW4/HW4-Final.ipynb
@@ -54,8 +54,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -80,14 +82,14 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "def myava (radi,function):\n",
+    "def myava (radi,function = area):\n",
     "    total = 0\n",
     "    for raduis in radi:\n",
     "        total = total + function(raduis)\n",
     "    avg = total/len(radi)\n",
     "    return avg\n",
     "\n",
-    "print(\"The average of the area of circles is: \",myava(float_circles,area))\n"
+    "print(\"The average of the area of circles is: \", myava(float_circles))"
    ]
   },
   {
@@ -127,6 +129,132 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Part 1\n",
+    "def make_withdraw(init_balance):\n",
+    "    def withdraw(withdraw_amount):\n",
+    "        if(withdraw_amount < 0):\n",
+    "            raise ValueError(\"Withdrawl amount must be positive\")\n",
+    "        if(withdraw_amount > init_balance):\n",
+    "            raise ValueError(\"Not sufficent funds for transaction! Balance = \",\n",
+    "                             init_balance, \"and withdraw requested = \", withdraw_amount)\n",
+    "        new_balance = init_balance - withdraw_amount\n",
+    "        return new_balance\n",
+    "    return withdraw\n",
+    "\n",
+    "'''\n",
+    "wd = make_withdraw(200)\n",
+    "wd(10)\n",
+    "wd(10)\n",
+    "\n",
+    "This doesn't work because you are not saving the new balance returned from the inner function (withdraw) anywhere\n",
+    "thus when you call wd(10) a second time it is simply working with the init_balance first passed in. To accomplish\n",
+    "the desired effect you must safe the new balance returned fromt eh first wd(10) and then recall make_withdraw with\n",
+    "the new balance and then call wd(10) a second time. Below I have provide code for how the desired effect can be \n",
+    "attained \n",
+    "\n",
+    "wd = make_withdraw(200)\n",
+    "new_balance = wd(10)\n",
+    "wd = make_withdraw(new_balance)\n",
+    "wd(10)\n",
+    "\n",
+    "Result: 180\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "Updating the init_balance within the inner function, as shown below will not work because when balance is passed into the make_withdraw function the function creates a varaible init_balance called but this variable is scoped to the make_withdraw function and is accesed by the withdraw function, changing init_balance in the withdraw function will cause an error \"UnboundLocalError\" because the init_balance value is simply given to it by the parent and is not defined in the inner fucntion it is defined by the parent. \n",
+    "\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "def make_withdraw(init_balance):\n",
+    "    def withdraw(withdraw_amount):\n",
+    "        if(withdraw_amount < 0):\n",
+    "            raise ValueError(\"Withdrawl amount must be positive\")\n",
+    "        if(withdraw_amount > init_balance):\n",
+    "            raise ValueError(\"Not sufficent funds for transaction! Balance = \",\n",
+    "                             init_balance, \"and withdraw requested = \", withdraw_amount)\n",
+    "        new_balance = init_balance - withdraw_amount\n",
+    "        init_balance = new_balance\n",
+    "        return new_balance\n",
+    "    return withdraw\n",
+    "    \n",
+    "\n",
+    "wd = make_withdraw(200)\n",
+    "wd(10) -> 190\n",
+    "wd(10) ->190"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "190\n",
+      "180\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Part 3\n",
+    "def make_withdraw(init_balance):\n",
+    "    def withdraw(withdraw_amount):\n",
+    "        nonlocal init_balance\n",
+    "        if(withdraw_amount < 0):\n",
+    "            raise ValueError(\"Withdrawl amount must be positive\")\n",
+    "        if(withdraw_amount > init_balance):\n",
+    "            raise ValueError(\"Not sufficent funds for transaction! Balance = \",\n",
+    "                             init_balance, \"and withdraw requested = \", withdraw_amount)\n",
+    "        new_balance = init_balance - withdraw_amount\n",
+    "        init_balance = new_balance\n",
+    "        return new_balance\n",
+    "    return withdraw\n",
+    "    \n",
+    "#usign the function\n",
+    "wd = make_withdraw(200)\n",
+    "print(wd(10))\n",
+    "print(wd(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"800\" height=\"500\" frameborder=\"0\" src=\"http://pythontutor.com/iframe-embed.html#code=def%20make_withdraw%28init_balance%29%3A%0A%20%20%20%20def%20withdraw%28withdraw_amount%29%3A%0A%20%20%20%20%20%20%20%20nonlocal%20init_balance%0A%20%20%20%20%20%20%20%20if%28withdraw_amount%20%3C%200%29%3A%0A%20%20%20%20%20%20%20%20%20%20%20%20raise%20ValueError%28%22Withdrawl%20amount%20must%20be%20positive%22%29%0A%20%20%20%20%20%20%20%20if%28withdraw_amount%20%3E%20init_balance%29%3A%0A%20%20%20%20%20%20%20%20%20%20%20%20raise%20ValueError%28%22Not%20sufficent%20funds%20for%20transaction!%20Balance%20%3D%20%22,%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20init_balance,%20%22and%20withdraw%20requested%20%3D%20%22,%20withdraw_amount%29%0A%20%20%20%20%20%20%20%20new_balance%20%3D%20init_balance%20-%20withdraw_amount%0A%20%20%20%20%20%20%20%20init_balance%20%3D%20new_balance%0A%20%20%20%20%20%20%20%20return%20new_balance%0A%20%20%20%20return%20withdraw%0A%0Awd%20%3D%20make_withdraw%28200%29%0Awd%2810%29%0Awd%2810%29&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=21&heapPrimitives=false&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false\"> </iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML \n",
+    "HTML('<iframe width=\"800\" height=\"500\" frameborder=\"0\" src=\"http://pythontutor.com/iframe-embed.html#code=def%20make_withdraw%28init_balance%29%3A%0A%20%20%20%20def%20withdraw%28withdraw_amount%29%3A%0A%20%20%20%20%20%20%20%20nonlocal%20init_balance%0A%20%20%20%20%20%20%20%20if%28withdraw_amount%20%3C%200%29%3A%0A%20%20%20%20%20%20%20%20%20%20%20%20raise%20ValueError%28%22Withdrawl%20amount%20must%20be%20positive%22%29%0A%20%20%20%20%20%20%20%20if%28withdraw_amount%20%3E%20init_balance%29%3A%0A%20%20%20%20%20%20%20%20%20%20%20%20raise%20ValueError%28%22Not%20sufficent%20funds%20for%20transaction!%20Balance%20%3D%20%22,%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20init_balance,%20%22and%20withdraw%20requested%20%3D%20%22,%20withdraw_amount%29%0A%20%20%20%20%20%20%20%20new_balance%20%3D%20init_balance%20-%20withdraw_amount%0A%20%20%20%20%20%20%20%20init_balance%20%3D%20new_balance%0A%20%20%20%20%20%20%20%20return%20new_balance%0A%20%20%20%20return%20withdraw%0A%0Awd%20%3D%20make_withdraw%28200%29%0Awd%2810%29%0Awd%2810%29&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=21&heapPrimitives=false&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false\"> </iframe>')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -145,6 +273,90 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "def timer(f):\n",
+    "    def inner(*args):\n",
+    "        t0 = time.time()\n",
+    "        output = f(*args)\n",
+    "        elapsed = time.time() - t0\n",
+    "        print(\"Time Elapsed\", elapsed)\n",
+    "        return output\n",
+    "    return inner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time Elapsed 4.00543212890625e-05\n",
+      "myave:  3.1958990970819956\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Problem 3 Function 1\n",
+    "areas = [0.0] * (len(float_circles))\n",
+    "\n",
+    "for i,raduis in enumerate(float_circles):\n",
+    "    areas[i] = (area(raduis))\n",
+    "    \n",
+    "@timer\n",
+    "def myave (areas_list):\n",
+    "    if (type(areas_list) != list):\n",
+    "        raise TypeError(\"Must pass in a list of areas as argument\")\n",
+    "    total = 0\n",
+    "    for area in areas_list:\n",
+    "        total = total + area\n",
+    "    avg = total/(len(areas_list))\n",
+    "    return avg\n",
+    "\n",
+    "#Testing\n",
+    "print(\"myave: \",myave(areas))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time Elapsed 4.482269287109375e-05\n",
+      "np_ave:  3.19589909708\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Problem 3 Function 2\n",
+    "areas_np = np.zeros(len(float_circles))\n",
+    "\n",
+    "for i,raduis in enumerate(float_circles):\n",
+    "    areas_np[i] = (area(raduis))\n",
+    "\n",
+    "@timer\n",
+    "def np_ave(array):\n",
+    "    avg = (np.sum(array))/(len(array))\n",
+    "    return avg\n",
+    "\n",
+    "#Testing\n",
+    "print(\"np_ave: \",np_ave(areas_np))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -159,6 +371,38 @@
     "Show that your decorator behaves correctly.  That is, for each function, show two cases (where applicable):\n",
     "1. A case where positivity is not violated\n",
     "2. A case where positivity is violated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78.53981633974483"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Problem 4 Decorator\n",
+    "def positive(f):\n",
+    "    def inner(*args):\n",
+    "        result = f(*args)\n",
+    "        if (result < 0):\n",
+    "            raise ValueError(\"Number returned: \", result,\"is not positive\")\n",
+    "        else:\n",
+    "            return result\n",
+    "    return inner\n",
+    "\n",
+    "#Testing Decorator\n",
+    "inner = positive(area)\n",
+    "inner(5)"
    ]
   }
  ],
