--- a/lectures/L7/Exercise_1-Final.ipynb
+++ b/lectures/L7/Exercise_1-Final.ipynb
@@ -41,14 +41,15 @@
     "%%file 12.py\n",
     "import numpy as np\n",
     "def L2(v, *args):\n",
-    "    \"\"\"Returns the computed L2 norm of a vector v.\n",
+    "    \"\"\"Returns the computed L2 norm of a vector v\n",
     "    \n",
     "    INPUTS\n",
     "    =======\n",
     "    v: list, \n",
     "        vector in form of list of numbers\n",
     "    *args: optional, list\n",
-    "        vector of weights & must be same length at v\n",
+    "        vector of weights & must be same length at v \n",
+    "        and if not a ValueError Exceptionis raised\n",
     "   \n",
     "    \n",
     "    RETURNS\n",
