--- a/homeworks/HW4/HW4-Final.ipynb
+++ b/homeworks/HW4/HW4-Final.ipynb
@@ -22,53 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Get Data\n",
-    "file = open('circles.txt', 'r')\n",
-    "circles = file.read().splitlines() \n",
-    "file.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.9681561892825645, 0.9383571028606462, 0.9633466725922948, 1.1190000819885169, 0.9015032470985564]\n"
-     ]
-    }
-   ],
-   "source": [
-    "float_circles = [float(circle) for circle in circles]\n",
-    "print(float_circles[:5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "def area(radius):\n",
-    "    a = math.pi*(radius**2)\n",
-    "    return a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +34,20 @@
     }
    ],
    "source": [
+    "# Problem 1\n",
+    "import math\n",
     "import numpy as np\n",
+    "\n",
+    "# Get Data\n",
+    "file = open('circles.txt', 'r')\n",
+    "circles = file.read().splitlines() \n",
+    "file.close()\n",
+    "\n",
+    "float_circles = [float(circle) for circle in circles]\n",
+    "\n",
+    "def area(radius):\n",
+    "    a = math.pi*(radius**2)\n",
+    "    return a\n",
     "\n",
     "def myava (radi,function = area):\n",
     "    total = 0\n",
@@ -130,10 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nwd = make_withdraw(200)\\nwd(10)\\nwd(10)\\n\\nThis doesn't work because you are not saving the new balance returned from the inner function (withdraw) anywhere\\nthus when you call wd(10) a second time it is simply working with the init_balance first passed in. To accomplish\\nthe desired effect you must safe the new balance returned fromt eh first wd(10) and then recall make_withdraw with\\nthe new balance and then call wd(10) a second time. Below I have provide code for how the desired effect can be \\nattained \\n\\nwd = make_withdraw(200)\\nnew_balance = wd(10)\\nwd = make_withdraw(new_balance)\\nwd(10)\\n\\nResult: 180\\n\""
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Problem 2\n",
     "# Part 1\n",
     "def make_withdraw(init_balance):\n",
     "    def withdraw(withdraw_amount):\n",
@@ -197,18 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "190\n",
-      "180\n"
-     ]
-    }
-   ],
+   "execution_count": 117,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "# Part 3\n",
     "def make_withdraw(init_balance):\n",
@@ -222,17 +194,12 @@
     "        new_balance = init_balance - withdraw_amount\n",
     "        init_balance = new_balance\n",
     "        return new_balance\n",
-    "    return withdraw\n",
-    "    \n",
-    "#usign the function\n",
-    "wd = make_withdraw(200)\n",
-    "print(wd(10))\n",
-    "print(wd(10))"
+    "    return withdraw"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +211,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,25 +374,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-80-c5c5a3c5d4f6>, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-80-c5c5a3c5d4f6>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    d = (b**2)-4ac\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Problem 4 Function 1\n",
     "@positive\n",
     "def discriminant (a,b,c):\n",
-    "    if ((type(a) != int and type(a) != float) \n",
-    "        or (type(b) != int and type(b) != float) \n",
-    "        or (type(c) != int and type(c) != float)):\n",
+    "    if ((type(a) != int and float) \n",
+    "        or (type(b) != int and float) \n",
+    "        or (type(c) != int and float)):\n",
     "        raise TypeError(\"All arguments must be numbers\")\n",
     "    d = (b**2)-4*a*c\n",
     "    return d"
@@ -433,7 +391,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Showing discriminant function w decorator where positivity is not violated\n",
+    "discriminant(1,5,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -443,25 +422,114 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-79-6d5aaabb7a80>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Testing discriminant\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdiscriminant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-63-8dfe2f3e2fda>\u001b[0m in \u001b[0;36minner\u001b[0;34m(*args)\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Number returned: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"is not positive\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-102-fe48207f8be7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Showing discriminant function w decorator where positivity is not violated\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdiscriminant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-78-3832a045d8ba>\u001b[0m in \u001b[0;36minner\u001b[0;34m(*args)\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Number returned: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"is not positive\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: ('Number returned: ', -8, 'is not positive')"
      ]
     }
    ],
    "source": [
-    "#Testing discriminant\n",
+    "#Showing discriminant function w decorator where positivity is violated\n",
     "discriminant(1,2,3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Problem 4 Function 2\n",
+    "@positive\n",
+    "def absolute_value(number):\n",
+    "    if (type(number) != int and float):\n",
+    "        raise TypeError(\"Argument must be a number\")\n",
+    "    if (number < 0):\n",
+    "        return -number\n",
+    "    else:\n",
+    "        return number "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Showing absolute_value w decorator, this function has no case where positivity is violated\n",
+    "print(absolute_value(-2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Problem 4 Function 3\n",
+    "#This function will calculate the product of two numbers, thus multiplying two numbers.\n",
+    "\n",
+    "@positive\n",
+    "def multiply(num1,num2): \n",
+    "    if (type(num1) != int and float) or (type(num2) != int and float):\n",
+    "        raise TypeError(\"Argument must be a number\")\n",
+    "    result = num1 * num2\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "('Number returned: ', -4, 'is not positive')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-112-e8f30969e97a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Showing absolute_value w decorator where positivity is violated\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-78-3832a045d8ba>\u001b[0m in \u001b[0;36minner\u001b[0;34m(*args)\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Number returned: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"is not positive\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: ('Number returned: ', -4, 'is not positive')"
+     ]
+    }
+   ],
+   "source": [
+    "#Showing absolute_value w decorator where positivity is violated\n",
+    "multiply(-2,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Showing absolute_value w decorator where positivity is notviolated\n",
+    "multiply(10,2)"
+   ]
   }
  ],
  "metadata": {
